Fixed images not showing bug

--- a/style.css
+++ b/style.css
@@ -501,7 +501,7 @@ footer
 {
     .intro
     {
-        padding: 2.5rem 4rem 0 4rem;
+        padding: 2.5rem 0 0 0;
     }
 
     .nav-bar
